...
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/search_box_field"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:drawableEnd="@drawable/ic_search_dark"
                        android:hint="@string/artist_search"
                        android:background="@color/white"
                        />
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/no_artist_text"
                android:visibility="@{viewModel.isLoading || viewModel.isNetworkErrorShown || viewModel.artist.size() > 0 ? View.GONE : View.VISIBLE}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_artist"
                android:textAlignment="center"
                android:textColor="@color/white"
...
