...

        <item android:id="@+id/nav_item_two"
            android:icon="@drawable/ic_album_dark"
            android:title="@string/menu_albums"/>

        <item
            android:id="@+id/nav_item_three"
            android:icon="@drawable/ic_person_dark"
            android:title="@string/menu_artists" />

        <item android:id="@+id/nav_item_four"
            android:icon="@drawable/ic_person_dark"
            android:title="@string/collectors"/>
...
