<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="artist" type="com.example.vinilos.models.Artist"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/artist_item_image"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/ic_album_dark"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:imageUri="@{artist.image}"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/artist_item_name"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:text="@{artist.name}"
            />
    </LinearLayout>
</layout>