<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scroll_create_album"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.AlbumsFragment"
        android:background="@color/vinilos_dark_gray"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:counterTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/album_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/album_name"
                    android:background="@color/white"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                app:errorEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                app:counterTextColor="@color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cover_image_url"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/album_cover_image_url"
                    android:background="@color/white"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/release_date"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/album_release_date"
                    android:background="@color/white"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                app:counterEnabled="true"
                app:counterMaxLength="200"
                app:counterTextColor="@color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/album_description"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:hint="@string/album_description"
                    android:background="@color/white"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menu"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/album_genre"
                android:labelFor="@+id/genre"
                >

                <AutoCompleteTextView
                    android:id="@+id/genre"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="none"
                    android:background="@color/white"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menuRecordLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/album_record_label"
                android:labelFor="@id/record_label"
                >

                <AutoCompleteTextView
                    android:id="@+id/record_label"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="none"
                    android:background="@color/white"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_add_album"
                android:text="@string/add_album"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/vinilos_green"/>

        </LinearLayout>
    </ScrollView>