<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable name="viewModel" type="com.example.vinilos.viewmodels.AlbumsViewModel"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.AlbumsFragment"
        android:background="@color/vinilos_dark_gray">

        <ScrollView
            android:visibility="@{viewModel.isLoading || viewModel.isNetworkErrorShown ? View.GONE : View.VISIBLE}"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/search_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/search_box_field"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:drawableEnd="@drawable/ic_search_dark"
                        android:hint="@string/albums_search"
                        android:background="@color/white"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/album_recycler_view"
                    android:layout_margin="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/search_box"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_add_button"
            android:visibility="@{viewModel.isUser || viewModel.isLoading || viewModel.isNetworkErrorShown ? View.GONE : View.VISIBLE}"
            app:backgroundTint="@color/vinilos_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_add_dark"
            android:layout_margin="16dp"
            android:contentDescription="@string/add_new_album_button"
            />

        <include
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:isVisible="@{viewModel.isLoading}"
            layout="@layout/loading_layout"
            />

        <include
            android:id="@+id/retry_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:isVisible="@{viewModel.isNetworkErrorShown}"
            layout="@layout/retry_layout"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/no_albums_text"
                android:visibility="@{viewModel.isLoading || viewModel.isNetworkErrorShown || viewModel.albums.size() > 0 ? View.GONE : View.VISIBLE}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_albums"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="20dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
