...
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_as_user"
            app:cornerRadius="10dp"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="@color/vinilos_pink"
            android:text="@string/main_sign_as_user"
...

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_as_collector"
            app:cornerRadius="10dp"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="@color/vinilos_pink"
            android:text="@string/main_sign_as_collector"
...
